--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
-<%= @user.name %>, <%= @user.email %>
+<h1><%= @user.name %></h1> 
+<%= @user.email %>
 
 <% if signed_in? %>
   <%= link_to "Sign out", signout_path, method: "delete" %>
