--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -80,7 +80,7 @@ div, input, textarea
 
 .item
   width: 19%
-  margin-bottom: 10px
+  margin: 1% 1% 0% 0%
   border-right: 1px solid $dark-grey
   border-bottom: 1px solid $dark-grey
   a img
