--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,6 +2,7 @@
 
 	<%= @picture.title  %>
 	<%= @picture.description %>
+	<%= @picture.user.name %>
 	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
 
 	<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
