adding user name to his art

--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -39,6 +39,8 @@
       = link_to picture do
         = image_tag(picture.image_url)
       = link_to picture.title, picture, :class => "art-name"
+      Door:
+      = picture.user.name
       -# = pluralize(picture.votes.count, "vote" )
       -# %span
         -# %div
