--- a/app/views/competitions/index.html.haml
+++ b/app/views/competitions/index.html.haml
@@ -19,8 +19,8 @@
         - if current_user == competition.user 
           %td= link_to 'Edit', edit_competition_path(competition)
           %td= link_to 'Destroy', competition, :method => :delete, :data => { :confirm => 'Are you sure?' }
-          %td= link_to 'Nieuwe wedstrijd aanmaken', new_competition_path
-
   %br
+  - if signed_in?
+    = link_to 'Nieuwe wedstrijd aanmaken', new_competition_path
 
   
