--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -47,8 +47,8 @@
           -# %p
             -# \ #{pluralize(picture.votes.count, "" )}
 - if current_user == @competition.user          
-  = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
-  \|
   = link_to 'Edit', edit_competition_path(@competition)
   \|
 = link_to 'Back', competitions_path
+- if signed_in?
+  = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
