--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -10,9 +10,14 @@
     %p
       %b Prize:
       = @competition.prize
+      = @competition.prize_2
+      = @competition.prize_3
     %p
       %b Deadline:
       = @competition.deadline
+    %p
+      %b Deadline:
+      = @competition.deadline_signin  
 
   #btn-vote
     Breng je stem uit!
