--- a/app/views/competitions/_form.html.haml
+++ b/app/views/competitions/_form.html.haml
@@ -1,4 +1,29 @@
-.edit-match 
+/
+  .edit-match 
+    = form_for @competition do |f|
+      - if @competition.errors.any?
+        #error_explanation
+          %h2= "#{pluralize(@competition.errors.count, "error")} prohibited this competition from being saved:"
+          %ul
+            - @competition.errors.full_messages.each do |msg|
+              %li= msg
+
+      .field
+        = f.label :title
+        = f.text_field :title
+      .field
+        = f.label :description
+        = f.text_field :description
+      .field
+        = f.label :prize
+        = f.text_field :prize
+      .field
+        = f.label :deadline
+        = f.text_field :deadline
+      .actions
+        = f.submit 'Wedstrijd aanmaken'
+
+#wrapper
   = form_for @competition do |f|
     - if @competition.errors.any?
       #error_explanation
@@ -6,18 +31,41 @@
         %ul
           - @competition.errors.full_messages.each do |msg|
             %li= msg
+    #content-left 
+      %h3
+        Wedstrijd naam
+      .field
+        = f.text_field :title
+      %h3
+        Wedstrijd omschrijving
+      .field
+        = f.text_area :description
+      %h3 
+        Eind datum inschrijving
+      .field
+        = f.text_field :deadline_signin, id:"datepickerInschrijving"
+      %h3
+        Eind datum inzending
+      .field
+        = f.text_field :deadline, id:"datepickerInzending"
+    
+    #content-right
+      %h3
+        Geef een prijs weg
+      %ol#sortable
+        %li.ui-state-default
+          = f.text_field :prize
+          /.closetag
+        %li.ui-state-default
+          = f.text_field :prize_2
+          /.closetag
+        %li.ui-state-default
+          = f.text_field :prize_3
+          /.closetag  
+    /      
+      #addPrise
+        Voeg nog een prijs toe
 
-    .field
-      = f.label :title
-      = f.text_field :title
-    .field
-      = f.label :description
-      = f.text_field :description
-    .field
-      = f.label :prize
-      = f.text_field :prize
-    .field
-      = f.label :deadline
-      = f.text_field :deadline
-    .actions
-      = f.submit 'Wedstrijd aanmaken'
+    #btn
+      .button
+        = f.submit 'Wedstrijd aanmaken'
