--- a/app/views/competitions/index.html.haml
+++ b/app/views/competitions/index.html.haml
@@ -13,6 +13,8 @@
         %td= link_to competition.title, competition
         %td= competition.description
         %td= competition.prize
+        %td= competition.prize_2
+        %td= competition.prize_3
         %td= competition.deadline
         %td= link_to 'Edit', edit_competition_path(competition)
         %td= link_to 'Destroy', competition, :method => :delete, :data => { :confirm => 'Are you sure?' }
