started front-end om homepage

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,9 @@
         %a{:href => "/"}
           = image_tag 'logo.png'
       #menu
-        %a{:href => "/"}Menu +
+        %a{:href => "/"}
+          Menu
+          %span +
         %ul
           %li 
             %a{:href => "/"}Join appSYNTH
