--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,6 +24,7 @@ div, a
 // Variables
 $black:         #000000
 $white:         #FFFFFF
+$beige:         #f9f9f9
 $darkest-grey:  #999999
 $dark-grey:     #D0D0D0
 $light-grey:    #F7F7F7
@@ -65,13 +66,17 @@ $dark-green:    #38EA6D
 h1
   font-size: 2em
   padding-bottom: 30px
+  font-family: Calibri
+  color:  rgba(0, 0, 0, 0.4)
+  font-size: 30px
+  font-weight: 400
+  line-height: 0.933
 
 body,html
   font-family: 'Muli', sans-serif
-  background: $light-grey
+  background: $beige
 
 div, input, textarea
-  @include border5px
   border: none
 
 #container-content
@@ -152,6 +157,14 @@ div, input, textarea
     &>a
       display: inline-block
       height: 46px
+      span
+        display: inline-block
+        background-color: #84d0f0
+        border-radius: 50%
+        padding: 2px 5px
+        color: $white
+        font-size: 1.3em
+        margin: -10px 0 0 10px
     ul
       position: absolute
       width: 330px
@@ -465,9 +478,192 @@ div, input, textarea
 #btn
   width: 700px
   clear: both
-
   input
     width: 280px
     height: 50px
     margin: 50px 0 0 400px
     padding: 0 0 0 20px
+
+#container-winners
+  float: left
+  width: 70%
+  margin-right: 5%
+  #view
+    img
+      width: 100%
+      max-height: 100%
+  #container-elements
+    position: relative
+    float: left
+    background: $white
+    width: 100%
+    #container-bottom
+      width: 100%
+      text-align: center
+      margin: 0 auto
+      #container-painter
+        display: inline-block
+        padding: 5px
+        margin-right: 5%
+        img
+          float: left
+        p
+          float: left
+          span
+            margin-left: 15px
+            font-family: "Times New Roman"
+            color: #000000
+            font-size: 18px
+            font-weight: 400
+            text-decoration: underline
+            float: left
+          span + span
+            clear: both
+            float: left
+            font-family: Calibri
+            color: #000000
+            font-size: 16px
+            font-style: italic
+            text-decoration: none
+            margin-top: 5px
+        a
+          margin-top: 8px
+          text-decoration: none
+          display: inline-block
+          font-size: 14px
+          background-color: #84d0f0
+          border-radius: 15px
+          padding: 5px 20px
+          color: $white
+          margin-left: 20px
+          border: none
+      #container-painting
+        display: inline-block
+        padding: 5px
+        p
+          float: left
+          span
+            float: left
+            font-family: "Times New Roman"
+            color:  #000000
+            font-size: 18px
+            font-weight: 400
+          span + span
+            clear: both
+            float: left
+            font-family: Calibri
+            color: #000000
+            font-size: 16px
+            font-style: italic
+            margin-top: 5px
+    #prev
+      background-image: url(arrow-prev.png)
+      background-position: center center
+      background-repeat: no-repeat
+      display: inline-block
+      padding: 30px
+      left: 0
+      top: 0
+      border-right: 1px solid $grey
+      position: absolute
+
+    #next
+      background-image: url('arrow-next.png')
+      background-position: center center
+      background-repeat: no-repeat
+      display: inline-block
+      padding: 30px
+      right: 0
+      top: 0
+      position: absolute
+      border-left: 1px solid $grey
+
+#container-newmatch
+  padding: 2%
+  width: 25%
+  float: left
+  background-color: $white
+  img
+    margin: 20px auto
+    max-width: 100%
+  p
+    clear: both
+    font-family: Calibri
+    color: #000000
+    font-size: 16px
+    float: left
+  h2
+    font-family: "Times New Roman"
+    color: #000000
+    font-size: 18px
+    margin: -2px 15px
+    display: inline-block
+    text-decoration: underline
+  a
+    margin-top: 60px
+    text-decoration: none
+    display: inline-block
+    font-size: 14px
+    background-color: #84d0f0
+    border-radius: 15px
+    padding: 5px 20px
+    color: $white
+    margin-left: 20px
+    border: none
+    clear: both
+    float: right
+
+#container-search
+  text-align: center
+  margin-top: 50px
+  float: left
+  width: 100%
+  background-color: $white
+  padding: 1%
+  margin-bottom: 30px
+  p
+    display: inline-block
+    font-family: Calibri
+    color: #8e8e8e
+    font-size: 16px
+    background-image: url('arrow-down.png')
+    background-repeat: no-repeat
+    background-position: 160px 0px
+    padding: 10px 60px 10px 0px
+    margin-right: 80px
+    border-right: 1px solid $grey
+  input
+    font-family: Calibri
+    color: #8e8e8e
+    font-size: 16px
+  button
+    display: inline-block
+    font-size: 14px
+    background-color: #84d0f0
+    border-radius: 15px
+    padding: 5px 20px
+    color: $white
+    margin-left: 20px
+    border: none
+
+#search-results
+  position: relative
+  width: 100%
+  float: left
+  #sponsor
+    float: left
+    width: 10%
+    margin-right: 5%
+    img
+      margin-top: 10px
+      max-width: 100%
+      clear: both
+  .js-masonry
+    float: right
+    width: 85%
+    .item
+      border: none
+      width: 19%
+      img
+        width: 100%
+
