added an ease animation

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -648,6 +648,9 @@ div, input, textarea
     font-family: Calibri
     color: #8e8e8e
     font-size: 16px
+    padding: 20px
+    border: 1px solid $grey
+    width: 180px
   button
     display: inline-block
     font-size: 14px
