--- a/app/views/competitions/homepage.html.haml
+++ b/app/views/competitions/homepage.html.haml
@@ -1,5 +1,6 @@
 %h1
-  Online kunst wedstrijden app SYNT
+  Online kunst wedstrijden app SYNT (BETA) 
+  = link_to 'klik hier om feedback te geven', new_review_path 
 
 #container-winners
   #view
