--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,25 @@
     = csrf_meta_tags
   %body
     #bg-overlay
+    #feedback
+      #feedback-form
+        = render :partial => 'reviews/form'
+      %p
+        F
+        %br
+        E
+        %br
+        E
+        %br
+        D
+        %br
+        B
+        %br
+        A
+        %br
+        C
+        %br
+        K
     #header
       #logo
         %a{:href => "/"}
