--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,7 +43,7 @@
           %li 
             %a{:href => "/"}Join appSYNTH
           %li 
-            %a{:href => "/"}Wedstrijd aanmaken
+            = link_to 'Nieuwe wedstrijd', new_competition_path
           %li 
             %a{:href => "/"}Sponsoren
           %li 
