styled competitions overview

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -51,8 +51,23 @@ $blue:          #84d0f0
 
 .start-match
   th
+    padding: 10px
     margin-right: 30px
-    width: 150px
+    width: 15%
+  td
+    background: $grey
+    border-left: 1px solid $lime-green
+    padding: 10px
+  #title
+    width: 10%
+  #description
+    width: 30%
+  #prize
+    width: 20%
+  #deadline
+    width: 10%
+  #username
+    width: 10%
 
 .edit-match
   .field
@@ -594,7 +609,6 @@ div, input, textarea
   width: 25%
   height: 100%
   float: left
-  background-color: $white
   img
     margin: 20px auto
     max-width: 100%
