--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -92,7 +92,6 @@ body,html
   font-family: 'Muli', sans-serif
   background: $beige
   height: 100%
-  padding-top: 30px
   overflow-y: hidden
 
 div, input, textarea
@@ -137,14 +136,13 @@ div, input, textarea
 #bg-overlay
   background: rgba(153, 153, 153, 0.5)
   position: absolute
-  top: 0
+  margin-top: 60px
   left: 0
   z-index: 1
   width: 100%
   height: 100%
 
 #header
-  position: fixed
   z-index: 2
   top: 0
   font-size: 0.9em
@@ -232,6 +230,7 @@ div, input, textarea
       @include box-sizing(border-box)
       background: $white
       width: 350px
+      z-index: 2
       padding: 20px
       position: absolute
   #facebook
