adding administator and administrator privileges and tool

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,6 +62,8 @@
       #facebook
         = image_tag 'icon-facebook.png'
       #login
+        - if signed_in? && current_user.administrator?
+          = link_to "administrator tools", users_path
         - if signed_in? 
           = link_to "Uitloggen", signout_path, method: "delete" 
         - else
