--- a/app/views/competitions/index.html.haml
+++ b/app/views/competitions/index.html.haml
@@ -26,7 +26,7 @@
           = competition.deadline.strftime('%e %B %Y')
         %td#username
           = competition.user.name
-        - if current_user == competition.user 
+        - if current_user == competition.user || current_user.administrator?
           %td#edit
             = link_to 'Edit', edit_competition_path(competition)
           %td#destroy
