--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -51,7 +51,7 @@
         -# %div
           -# %p
             -# \ #{pluralize(picture.votes.count, "" )}
-- if current_user == @competition.user          
+- if current_user == @competition.user || current_user.administrator?          
   = link_to 'Edit', edit_competition_path(@competition)
   \|
 = link_to 'Back', competitions_path
