--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -5,7 +5,7 @@
 	<%= @picture.user.name %>
 	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
 
-	<% if current_user == @picture.user %>
+	<% if current_user == @picture.user || current_user.administrator? %>
 		<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
 	      <%= link_to 'Verwijderen', @picture, confirm: 'Weet je het zeker?', method: :delete %> |
 	      <%= link_to 'Terug', :back %>
