--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -51,9 +51,10 @@
         -# %div
           -# %p
             -# \ #{pluralize(picture.votes.count, "" )}
-- if current_user == @competition.user || current_user.administrator?          
-  = link_to 'Edit', edit_competition_path(@competition)
-  \|
-= link_to 'Back', competitions_path
 - if signed_in?
-  = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
+  - if current_user == @competition.user || current_user.administrator?          
+    = link_to 'Edit', edit_competition_path(@competition)
+    \|
+  = link_to 'Back', competitions_path
+  - if signed_in?
+    = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
