--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,7 +8,7 @@
 @import "companimation/preset/bounce/bounceIn"
 @import "companimation/preset/filters/blurInDown"
 
-// Stuff
+// Stuf
 div, a
   @include box-sizing(border-box)
 
