adding result table

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,18 +1,22 @@
 - provide(:title, @user.name)
 %h1
-  Gallerij van #{@user.name}
+  Gallerij van #{@user.name} 
 %h1
   Competities:
 - @user.competitions.each do |competition|
   %h1
     = link_to competition.title, competition
-  - if signed_in?
-    - if current_user == competition.user || current_user.administrator? 
-      %ul 
+    .start-match
+      %table
+        %tr
+          %th Titel
+          %th Punten
         - competition.pictures.each do |picture| 
-          %li
-            = link_to picture.title, picture 
-            &#45; #{pluralize(picture.votes.count, "" )} punten
+          %tr
+            %td#title
+              = link_to picture.title, picture 
+            %td#description
+              = picture.votes.count
 #container.js-masonry
   - @user.pictures.each do |picture|
     .item
