request page only for admin

--- a/app/views/businessrequests/index.html.haml
+++ b/app/views/businessrequests/index.html.haml
@@ -1,4 +1,8 @@
-%h1 Listing businessrequests
+%h1 Ondernemers Verzoeken
+%h2
+  = link_to 'Gebruikers', users_path 
+  &#8722;
+  = link_to 'Ondernemer Verzoeken', businessrequests_path
 .start-match
   %table
     %tr
