--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,9 @@
+%h1
+	Gebruikers
 %h2
-	Lijst met users
+	= link_to 'Gebruikers', users_path 
+	&#8722;
+	= link_to 'Ondernemer Verzoeken', businessrequests_path
 .start-match
 	%table
 		%tr
