adding a radio button that should turn a user in an administrator

--- a/app/views/businessrequests/index.html.haml
+++ b/app/views/businessrequests/index.html.haml
@@ -19,7 +19,7 @@
     - @businessrequests.each do |businessrequest|
       %tr
         %td#title
-          = link_to businessrequest.user.name
+          = link_to businessrequest.user.name, businessrequest.user
         %td= businessrequest.user.email
         %td= businessrequest.kvk
         %td= businessrequest.company
