--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,8 +10,8 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
-      <%= f.label :Administrator %>
-      <%= f.check_box :administrator %>
+      <%= f.label :Ondernemer %>
+      <%= f.check_box :b_account %>
 
       <%= f.submit "Update", class: "btn btn-large btn-primary" %>
     <% end %>
