--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -14,6 +14,8 @@
 			%tr
 				%td#title
 					= link_to user.name, user
+					- if user.b_account?
+						&#45; Ondernemer
 				%td#description
 					= user.email
 				%td#destroy
