--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,11 @@
 - provide(:title, @user.name)
 %h1
-  Gallerij van #{@user.name}
-  &#45;
+  Gallerij van #{@user.name} 
   - if @user.b_account?
-    Ondernemer
-  = link_to 'Edit', edit_user_path(@user)
+    &#45; Ondernemer
+  - if signed_in?
+    - if current_user.administrator?
+      = link_to 'Edit', edit_user_path(@user)
 #container.js-masonry
   - @user.pictures.each do |picture|
     .item
