--- a/app/views/registration_mailer/new_registration_email.html.erb
+++ b/app/views/registration_mailer/new_registration_email.html.erb
@@ -5,5 +5,8 @@
 		<p>
 			Hier is uw verificatiecode<br /> <%= @user.authentication_token %>
 		</p>
+		<p>
+			<%= link_to 'Klik hier om in te voeren', checktoken_path %>
+		</p>
 	</body>
 </html>
