--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,6 +34,10 @@
       #register
         - if signed_in? 
           = link_to current_user.name, current_user
+          - if current_user.activated?
+            X
+          - else
+            nog niet geactiveerd
         - else
           = link_to 'Registreren', new_user_path
       #twitter
