--- a/app/views/registration_mailer/new_registration_email.html.erb
+++ b/app/views/registration_mailer/new_registration_email.html.erb
@@ -3,10 +3,7 @@
 	<body>
 		<h1>Hallo <%= @user.name %> </h1>
 		<p>
-			Hier is uw verificatiecode<br /> <%= @user.authentication_token %>
-		</p>
-		<p>
-			<a href="localhost:3000/checktoken?authentication_token=<%= @user.authentication_token %>">Klik hier om uw token in te voeren</a>
+			<a href="localhost:3000/checktoken?authentication_token=<%= @user.authentication_token %>">Klik hier om uw account te activeren</a>
 		</p>
 	</body>
 </html>
